// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderModule should pass children to the module 1`] = `
<RenderModule
  moduleName="my-test-module"
  props={Object {}}
>
  <MyTestModule>
    <div>
      {}
      <h1>
        Hello, world
      </h1>
    </div>
  </MyTestModule>
</RenderModule>
`;

exports[`RenderModule should pass props to the module 1`] = `
<RenderModule
  moduleName="my-test-module"
  props={
    Object {
      "foo": "bar",
      "hello": "world",
    }
  }
>
  <MyTestModule
    foo="bar"
    hello="world"
  >
    <div>
      {
  "hello": "world",
  "foo": "bar"
}
    </div>
  </MyTestModule>
</RenderModule>
`;

exports[`RenderModule should render a module 1`] = `
<RenderModule
  moduleName="my-test-module"
  props={Object {}}
>
  <MyTestModule>
    <div>
      {}
    </div>
  </MyTestModule>
</RenderModule>
`;

exports[`RenderModule should warn and render null when it cannot find a module in registry 1`] = `
Array [
  Array [
    "Module not-in-module-map was not found in the holocron module registry",
  ],
]
`;

exports[`RenderModule should warn and render null when it cannot find a module in registry 2`] = `
<RenderModule
  moduleName="not-in-module-map"
  props={Object {}}
/>
`;

exports[`RenderModule should warn and render null when module is not loaded 1`] = `
Array [
  Array [
    "Module not-in-module-map was not found in the holocron module registry",
  ],
]
`;

exports[`RenderModule should warn and render null when module is not loaded 2`] = `
<RenderModule
  moduleName="not-in-module-map"
  props={Object {}}
/>
`;
